update maven build and oracle version

--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.lucee</groupId>
   <artifactId>oracle</artifactId>
-  <version>21.3.0.0000L</version>
+  <version>19.18.0.0-ojdbc8</version>
   <name>oracle</name>
   <packaging>bundle</packaging>
 
@@ -11,18 +11,15 @@
 
   <!-- same license as the original jar -->
   <licenses>
-
-	<license>
+<license>
 		<name>Oracle Free Use Terms and Conditions</name>
 		<url>https://www.oracle.com/downloads/licenses/oracle-free-license.html</url>
 		<comments></comments>
 	</license>
-
   </licenses>
 
   <developers>
-
-    <developer>
+<developer>
       <id>micstriit</id>
       <name>Michael Offner</name>
       <email>michael@lucee.org</email>
@@ -34,27 +31,24 @@
       </roles>
       <timezone>+1</timezone>
     </developer>
-
   </developers>
 
   <build>
     <plugins>
-      <plugin>
-      <groupId>org.sonatype.plugins</groupId>
-      <artifactId>nexus-staging-maven-plugin</artifactId>
-      <version>1.6.3</version>
+    <plugin>
+      <groupId>org.sonatype.central</groupId>
+      <artifactId>central-publishing-maven-plugin</artifactId>
+      <version>0.8.0</version>
       <extensions>true</extensions>
       <configuration>
-        <serverId>ossrh</serverId>
-        <nexusUrl>https://oss.sonatype.org/</nexusUrl>
-        <autoReleaseAfterClose>true</autoReleaseAfterClose>
+        <publishingServerId>ossrh</publishingServerId>
+        <autoPublish>true</autoPublish>
       </configuration>
     </plugin>
-
     <plugin>
       <groupId>org.apache.maven.plugins</groupId>
       <artifactId>maven-gpg-plugin</artifactId>
-      <version>1.5</version>
+      <version>3.0.1</version>
       <executions>
         <execution>
           <id>sign-artifacts</id>
@@ -93,11 +87,12 @@
                <artifactItems>
                  <artifactItem>
                    <groupId>com.oracle.database.jdbc</groupId>
-                    <artifactId>ojdbc11</artifactId>
-                    <version>21.3.0.0</version>
+                    <artifactId>ojdbc8</artifactId>
+                    <version>19.18.0.0</version>
                    <type>jar</type>
                    <overWrite>false</overWrite>
                    <outputDirectory>${project.build.directory}/classes</outputDirectory>
+                   <includes>**/*.*</includes>
                  </artifactItem>
                </artifactItems>
                <overWriteReleases>true</overWriteReleases>
@@ -120,8 +115,8 @@
             <Export-Package>*,META-INF.services.*</Export-Package>
             <!-- <Require-Bundle></Require-Bundle> -->
             <!-- <Require-Bundle-Fragment></Require-Bundle-Fragment> -->
-            <Import-Package>!com.oracle.common.base,!com.oracle.common.internal,!com.oracle.common.internal.net.ipclw.mql,!com.oracle.common.io,!com.oracle.common.net,!com.oracle.net,!com.sun.security.jgss,!javax.json,!javax.json.stream,!javax.security.cert,!oracle.as.jmx.framework,!oracle.i18n.text,!javax.resource.spi,!javax.resource.spi.endpoint,!javax.resource.spi.security,!oracle.security.pki,!oracle.ons,!oracle.i18n.text.converter,!oracle.xml.parser.v2,!sun.security.krb5.internal,!oracle.xdb,!com.sun.security.auth.module,!sun.security.util,!sun.security.krb5,!oracle.security.jps.service.keystore,!oracle.simplefan,!oracle.xml.util,!com.oracle.svm.core.annotate,!com.oracle.svm.core.configure,!jdk.net,!oracle.core.ojdl,!oracle.dms.console,!oracle.dms.context,!oracle.dms.instrument,!oracle.ucp.jdbc,!oracle.ucp.proxy,!org.graalvm.nativeimage,!org.graalvm.nativeimage.hosted,*</Import-Package>
-            <DynamicImport-Package>com.oracle.common.base,com.oracle.common.internal,com.oracle.common.internal.net.ipclw.mql,com.oracle.common.io,com.oracle.common.net,com.oracle.net,com.sun.security.jgss,javax.json,javax.json.stream,javax.security.cert,oracle.as.jmx.framework,oracle.i18n.text,javax.resource.spi,javax.resource.spi.endpoint,javax.resource.spi.security,oracle.security.pki,oracle.ons,oracle.i18n.text.converter,oracle.xml.parser.v2,sun.security.krb5.internal,oracle.xdb,com.sun.security.auth.module,sun.security.util,sun.security.krb5,oracle.security.jps.service.keystore,oracle.simplefan,oracle.xml.util,com.oracle.svm.core.annotate,com.oracle.svm.core.configure,jdk.net,oracle.core.ojdl,oracle.dms.console,oracle.dms.context,oracle.dms.instrument,oracle.ucp.jdbc,oracle.ucp.proxy,org.graalvm.nativeimage,org.graalvm.nativeimage.hosted</DynamicImport-Package>
+            <Import-Package>!com.oracle.common.base,!com.oracle.common.internal,!com.oracle.common.internal.net.ipclw.mql,!com.oracle.common.io,!com.oracle.common.net,!com.oracle.net,!com.sun.security.jgss,!javax.json,!javax.json.stream,!javax.security.cert,!oracle.as.jmx.framework,!oracle.i18n.text,!javax.resource.spi,!javax.resource.spi.endpoint,!javax.resource.spi.security,!oracle.security.pki,!oracle.ons,!oracle.i18n.text.converter,!oracle.xml.parser.v2,!sun.security.krb5.internal,!oracle.xdb,!com.sun.security.auth.module,!sun.security.util,!sun.security.krb5,!oracle.security.jps.service.keystore,!oracle.simplefan,!oracle.xml.util,!com.oracle.svm.core.annotate,!com.oracle.svm.core.configure,!jdk.net,!oracle.core.ojdl,!oracle.dms.console,!oracle.dms.context,!oracle.dms.instrument,!oracle.ucp.jdbc,!oracle.ucp.proxy,!org.graalvm.nativeimage,!org.graalvm.nativeimage.hosted,!sun.reflect,*</Import-Package>
+            <DynamicImport-Package>com.oracle.common.base,com.oracle.common.internal,com.oracle.common.internal.net.ipclw.mql,com.oracle.common.io,com.oracle.common.net,com.oracle.net,com.sun.security.jgss,javax.json,javax.json.stream,javax.security.cert,oracle.as.jmx.framework,oracle.i18n.text,javax.resource.spi,javax.resource.spi.endpoint,javax.resource.spi.security,oracle.security.pki,oracle.ons,oracle.i18n.text.converter,oracle.xml.parser.v2,sun.security.krb5.internal,oracle.xdb,com.sun.security.auth.module,sun.security.util,sun.security.krb5,oracle.security.jps.service.keystore,oracle.simplefan,oracle.xml.util,com.oracle.svm.core.annotate,com.oracle.svm.core.configure,jdk.net,oracle.core.ojdl,oracle.dms.console,oracle.dms.context,oracle.dms.instrument,oracle.ucp.jdbc,oracle.ucp.proxy,org.graalvm.nativeimage,org.graalvm.nativeimage.hosted,sun.reflect</DynamicImport-Package>
             <!-- <Fragment-Host></Fragment-Host> -->
           </instructions>
         </configuration>
@@ -140,16 +135,4 @@
     <developerConnection>scm:git:git@github.com:lucee/osgi-bundle-oracle.git</developerConnection>
     <tag>oracle OSGi library</tag>
   </scm>
-
-  <distributionManagement>
-    <repository>
-    <id>ossrh</id>
-    <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
-  </repository>
-    <snapshotRepository>
-      <id>ossrh</id>
-      <url>https://oss.sonatype.org/content/repositories/snapshots</url>
-    </snapshotRepository>
-  </distributionManagement>
-
 </project>
